--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   
 
   
-  <link rel="stylesheet" href="/progress-for-jekyll/css/reset.css">
-  <link rel="stylesheet" href="/progress-for-jekyll/css/style.css">
+  <link rel="stylesheet" href="/{{ url }}/css/reset.css">
+  <link rel="stylesheet" href="/{{ url }}/css/style.css">
 
-  <script src="/progress-for-jekyll/js/modernizr.js"></script> 
+  <script src="/{{ url }}/js/modernizr.js"></script> 
   
 
 
